fixe Z-index

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -42,10 +42,10 @@
 .content .lightbox__prev{
     background: url('../assets/icons/arrow.svg') center center / 30px 48px no-repeat;
     width: 50px;
-    height: 100%;
+    height: 69%;
     border: none;
     position: fixed;
-    top: 0;
+    top: 18%;
     margin-top:-14px ;
     z-index: 1200;
     opacity: 1;
